--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 //    testCompile('org.junit.jupiter:junit-jupiter-api:5.3.2')
 //    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.2')
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
+    testImplementation 'org.awaitility:awaitility:4.0.1'
     compile('org.jetbrains:annotations:16.0.2')
     compile('org.apache.commons:commons-lang3:3.0')
     compile('com.google.guava:guava:27.1-jre')
